Format fixes and unnecessary imports removal