@@ -7,14 +7,11 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import sun.misc.BASE64Decoder;
+
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-import java.io.IOException;
-import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.Base64;
 import java.util.UUID;
 
 @RequestMapping("/login/customer/api")
@@ -50,14 +47,7 @@ public class CustomerLoginControlller {
 //        String[] authParts = header.split("\\s+");
         String authInfo = authParts[1];
         byte[] bytes = null;
-        try {
-            bytes = new BASE64Decoder().decodeBuffer(authInfo);
-        } catch (IOException e) {
-            e.printStackTrace();
-            // TODO Auto-generated catch block
-            return new ResponseEntity<>("BAD REQUEST",new HttpHeaders(), HttpStatus.BAD_REQUEST);
-
-        }
+        bytes = Base64.getDecoder().decode(authInfo);
         decodedAuth = new String(bytes);
         String username = decodedAuth.split(":")[0];
         long userId = Long.parseLong(username);
